--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*   Setting styles, background img for body */
 body{
     background-image: url(flight.jpg) !important;
     background-size: cover;
@@ -22,7 +23,7 @@ body{
 
 
 }
-
+/* Styles for Audio and setting the display to none so that its not visible on browser */
 audio { display:none;}
  #info{
     position: absolute;
@@ -37,6 +38,7 @@ audio { display:none;}
      opacity: 0.6;
  }
 
+ /*  Setting background and opacity and styles for form.*/
 #form{
     background-color: #000;
     height:2000px;
